test/unit/components/dialogue/scripts/invalid-syntax/branch-simple-twice-converged.dscript
################################
##### MAIN PATH
################################

Bob angry C
I am angry right now. Are you?
Yes -> FRIENDSHIP
No -> FIGHT
Maybe -> IGNORE
END

    ################################
    ##### FIGHT PATH
    ################################

    Bob pissed M FIGHT
    Okay then, FIGHT!

    Bob pissed M FIGHT
    TIME TO BOX.

    CONVERGE FIGHT

    ################################
    ##### FRIENDSHIP PATH
    ################################

    Bob pissed M FRIENDSHIP
    Okay then, FRIEND!

    Bob pissed M FRIENDSHIP
    TIME FOR SHOTS.

    CONVERGE FRIENDSHIP

    # You cannot converge again

    CONVERGE FRIENDSHIP

    ################################
    ##### IGNORE PATH
    ################################

    Bob pissed M IGNORE
    ...

    Bob pissed M IGNORE
    ...hm?

    CONVERGE IGNORE

Bob neutral M
Meh, you are alright...
